<resources>
    <string name="app_name">小型仓库管理系统</string>
    <string name="loginHint">请输入登录密码</string>
    <string name="loginBtnText">登录</string>
    <string name="WelcomeText">欢迎使用仓库管理软件</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="intoShowMenu">查  看</string>
    <string name="intoPurchaseForm">进  货</string>
    <string name="intoProductForm">生  产</string>
    <string name="intoAssemblyForm">组  装</string>
    <string name="packed">打  包</string>
    <string name="shipment">出  货</string>
    <string name="recycle">回  收</string>
    <string name="returnProduct">退  货</string>
    <string name="mainMenuTitle">选择您所需的操作</string>
    <string name="showMenuTitle">查看功能菜单</string>
    <string name="showMaterialTable">查看原料库存</string>
    <string name="showPartsTable">查看配件库存</string>
    <string name="showProductTable">查看成品库存</string>
    <string name="showPackedTable">查看包装库存</string>
    <string name="showShipmentTable">查看出货记录</string>
    <string name="purchasePagerItemMaterialName">原料名称:</string>
    <string name="purchasePagerItemMaterialType">原料种类:</string>
    <string name="purchasePagerItemMaterialNumber">原料数量:</string>
    <string name="purchasePagerItemMaterialLocation">原料位置:</string>
    <string name="purcharsePagerItemMaterialDetail">原料详情:</string>
    <string name="submit">提&#12288;交</string>
    <string name="purchasePagerItemPartsName">配件名称:</string>
    <string name="purchasePagerItemPartsNumber">配件数量:</string>
    <string name="purchasePagerItemPartsUnitText">单&#12288;&#12288;位:</string>
    <string name="purchasePagerItemPartsLocation">配件位置:</string>
    <string name="purchasePagerItemPartsDetail">配件详情:</string>
    <string name="produceASMPagerMaterialConsumeTitle">原料损耗(单个)</string>
    <string name="produceASMPagerMaterialConsumeName">原料名称</string>
    <string name="produceAddMaterialConsumeItem">添加原料消耗项</string>
    <string name="produceASMPagerItemTargetTitle">配件信息登记</string>
    <string name="produceASMPagerItemTargetName">配件名称</string>
    <string name="produceASMPagerItemTargetNumber">配件数量</string>
    <string name="produceASMMaterialConsumeNumber">占&#12288;&#12288;比</string>
    <string name="producePagerItemMaterialLoss">损&#8197;&#8197;耗&#8197;&#8197;比</string>
    <string name="produceASMPagerItemMaterialUnitWeight">配件单重</string>
    <string name="produceASMPagerItemDetail">配件详情</string>
    <string name="producePDTPagerItemTargetTitle">产品信息登记</string>
    <string name="producePDTPagerItemTargetName">产品名称</string>
    <string name="producePDTPagerItemTargetNumber">产品数量</string>
    <string name="producePDTPagerItemMaterialUnitWeight">产品单重</string>
    <string name="producePDTPagerItemDetail">产品详情</string>
    <string name="packedStandardTitle">打包规格（件）</string>
    <string name="packedProductNameText">产品名称</string>
    <string name="packedProductNumber">产品数量</string>
    <string name="packedAddProduct">添加产品项</string>
    <string name="packedPackageTitle">货物信息</string>
    <string name="packedPackageName">货物名称</string>
    <string name="packedPackageNumber">货物数量</string>
    <string name="packedPackageLocation">货物位置</string>
    <string name="packedPackageDetail">货物详情</string>
    <string name="assemblyItemTitle">配件信息（单个）</string>
    <string name="assemblyItemName">配件名称</string>
    <string name="assemblyItemNumber">配件数量</string>
    <string name="assemblyAddItemBtn">添加配件项</string>
    <string name="assemblyTargetTitle">产品信息</string>
    <string name="assemblyTargetName">产品名称</string>
    <string name="assemblyTargetNumber">产品数量</string>
    <string name="assemblyTargetLocation">产品位置</string>
    <string name="assemblyTargetDetail">产品详情</string>
    <string name="shipmentPackageItemTitle">货物信息</string>
    <string name="shipmentPackageItemName">货物名称</string>
    <string name="shipmentPacakgeItemNumber">货物数量</string>
    <string name="shipmentAddPackageItem">添加货物项</string>
    <string name="shipmentInfoTitle">发货信息</string>
    <string name="shipmentInfoRecv">收&#8197;&#8197;货&#8197;&#8197;人</string>
    <string name="shipmentInfoDate">发货日期</string>
    <string name="shipmentPackageItemDetail">货物备注</string>
    <string name="recycleTitle">回&#12288;&#12288;收</string>
    <string name="recycleName">回收物品</string>
    <string name="recycleNumber">回收数量</string>
    <string name="recycleToMaterialTitle">原&#8197;&#8197;材&#8197;&#8197;料</string>
    <string name="recycleToMaterialName">材料名称</string>
    <string name="recycleToMaterialNumber">材料数量</string>
    <string name="recycleToMaterialLocation">材料位置</string>
    <string name="recycleToMaterialDetail">材料详情</string>
    <string name="returnProductName">货物名称</string>
    <string name="returnProductNumber">货物数量</string>
    <string name="returnProductLocation">存放位置</string>
    <string name="returnProductDetail">货物详情</string>
    <string name="returnRecordTitle">退货记录</string>
    <string name="returnFromName">退&#8197;&#8197;货&#8197;&#8197;人</string>
    <string name="returnFromDate">退货日期</string>
    <string name="returnFromDetail">退货详情</string>
    <string name="purchase_material_item_title">原料</string>
    <string name="purchase_parts_item_title">配件</string>
    <string name="produce_parts_item_title">配件</string>
    <string name="produce_product_item_title">产品</string>
    <string name="produceASMPagerItemLocation">配件位置</string>
    <string name="producePDTPagerItemLocation">产品位置</string>
    <string name="inputMaterialName">请输入原料名称</string>
    <string name="search">查找</string>
    <string name="inputPackedName">请输入货物名称</string>
    <string name="inputAssemblyName">请输入配件名称</string>
    <string name="inputProductName">请输入产品名称</string>
    <string name="inputRecvrName">请输入收货人</string>
    <string name="nothing">无内容</string>
    <string name="deleteItem">删除</string>
</resources>