<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/mainMenuTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="35dp"
            android:text="@string/mainMenuTitle"/>

        <Button
            android:id="@+id/intoShowMenuBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:textSize="15sp"
            android:text="@string/intoShowMenu"/>

        <Button
            android:id="@+id/intoPurchaseMenuBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:textSize="15sp"
            android:text="@string/intoPurchaseForm"/>

        <Button
            android:id="@+id/intoProductMenuBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:textSize="15sp"
            android:text="@string/intoProductForm"/>

        <Button
            android:id="@+id/intoAssemblyMenuBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:textSize="15sp"
            android:text="@string/intoAssemblyForm"/>

        <Button
            android:id="@+id/intoPackedBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:textSize="15sp"
            android:text="@string/packed"/>

        <Button
            android:id="@+id/intoShipmentBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:textSize="15sp"
            android:text="@string/shipment"/>

        <Button
            android:id="@+id/intoRecycleProductBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:textSize="15sp"
            android:text="@string/recycle"/>

        <Button
            android:id="@+id/intoReturnProductBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:textSize="15sp"
            android:text="@string/returnProduct"/>

    </LinearLayout>

</ScrollView>