<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp">

    <TextView
        android:id="@+id/showMenuTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:text="@string/showMenuTitle"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <Button
        android:id="@+id/showMaterialTableBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:textSize="15sp"
        android:text="@string/showMaterialTable"/>

    <Button
        android:id="@+id/showPartsTableBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:textSize="15sp"
        android:text="@string/showPartsTable"/>

    <Button
        android:id="@+id/showProductTableBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:textSize="15sp"
        android:text="@string/showProductTable"/>

    <Button
        android:id="@+id/showPackedTableBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:textSize="15sp"
        android:text="@string/showPackedTable"/>

    <Button
        android:id="@+id/showShipmentTableBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:textSize="15sp"
        android:text="@string/showShipmentTable"/>

</LinearLayout>