<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/returnProductTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shipmentPackageItemTitle"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/returnProductNameText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/returnProductName"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/returnProductNameEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:inputType="text"
                android:singleLine="true"
                tools:ignore="Autofill,LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/returnProductNumberText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/returnProductNumber"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/returnProductNumberEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:inputType="number"
                android:singleLine="true"
                tools:ignore="Autofill,LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/returnProductLocationText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/returnProductLocation"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/returnProductLocationEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:inputType="text"
                android:singleLine="true"
                tools:ignore="Autofill,LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/returnProductDetailText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/returnProductDetail"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/returnProductDetailEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:lines="2"
                tools:ignore="Autofill,LabelFor,TextFields" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/returnRecordTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/returnRecordTitle"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/returnFromNameText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/returnFromName"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/returnFromNameEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:inputType="text"
                android:singleLine="true"
                tools:ignore="Autofill,LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/returnFromDateText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/returnFromDate"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/returnFromDateEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:inputType="date"
                android:singleLine="true"
                tools:ignore="Autofill,LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/returnFromDetailText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/returnFromDetail"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/returnFromDetialEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:lines="2"
                tools:ignore="Autofill,LabelFor,TextFields" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/returnSubmitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textSize="16sp"/>

</LinearLayout>
