<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/assemblyItemTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/assemblyItemTitle"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/assemblyItemNameText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/assemblyItemName"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/assemblyItemNameSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/assemblyItemNumberText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/assemblyItemNumber"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/assemblyItemNumberEdit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:inputType="number"
                    android:singleLine="true"
                    tools:ignore="Autofill,LabelFor" />

            </LinearLayout>

            <Button
                android:id="@+id/assemblyAddItemBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/assemblyAddItemBtn"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/assemblyTargetTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/assemblyTargetTitle"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/assemblyTargetNameText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/assemblyTargetName"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/packedPackageNameEdit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:inputType="text"
                    android:singleLine="true"
                    tools:ignore="Autofill,LabelFor" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/assemblyTargetNumberText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/assemblyTargetNumber"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/packedPackageNumberEdit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:inputType="number"
                    android:singleLine="true"
                    tools:ignore="Autofill,LabelFor" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/assemblyTargetLocationText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/assemblyTargetLocation"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/assemblyProductLocationSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/assemblyTargetDetialText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/assemblyTargetDetail"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/assemblyTargetDetailEdit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:lines="6"
                    tools:ignore="Autofill,LabelFor,TextFields" />

            </LinearLayout>

            <Button
                android:id="@+id/assemblySubmitBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textSize="16sp"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>