<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/hintText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/loginHint"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="numberPassword"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginBtnText" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginRight="30dp"
        android:text="@string/forgetPassword"
        tools:ignore="RtlHardcoded"
        android:linksClickable="true"/>


</LinearLayout>
